# AoC_2021

./: CMakeLists.txt  Utils.hpp  day_1.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_6.cpp  day_7.cpp  day_8.cpp  day_9.cpp
input/: test.txt
